--- a/public/locales/ko.json
+++ b/public/locales/ko.json
@@ -1,4 +1,9 @@
 {
-  "공BAD n개": "공BAD {{n}}개",
-  "구버전 공BAD n개": "구버전 공BAD {{n}}개"
+  "스코어 계산기": "스코어 계산기",
+  "스코어": "스코어",
+  "구버전 스코어": "구버전 스코어",
+  "공BAD": "공BAD",
+  "구버전 공BAD": "구버전 공BAD",
+  "n개": "{{n}}개",
+  "유효하지 않은 값이 있습니다.": "유효하지 않은 값이 있습니다."
 }
